--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
+body {
+  margin: 0px;
+  height: 100vh;
+  background: linear-gradient(#e66465, #9198e5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.calculator {
+  /* Size and Position */
+  height: 80vh;
+  width: 50vh;
+  min-width: 300px;
+  min-height: 500px;
+  padding: 10px;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* Layout */
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  /* Design */
+  background: rgba(255, 255, 255, 0.25);
+  border: 3px solid white;
+  border-radius: 15px;
+  box-shadow: 0 0 20px black;
 }
 
-.App-link {
-  color: #61dafb;
+.calculator h1 {
+  /* Size & position */
+  height: 120px;
+  padding: 0px 10px;
+  margin: 10px 0 10px 0;
+
+  /* Layout */
+  text-align: right;
+  font-size: 50px;
+  line-height: 120px;
+
+  /* Design */
+  background-color: rgba(255, 255, 255, 0.5);
+  border: 2px solid white;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calcButtons {
+  /* Size */
+  flex: 1;
+  margin: 0px;
+
+  /* Layout */
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  gap: 5px;
+}
+
+.buttons {
+  /* Size */
+  height: 100%;
+  width: 100%;
+
+  /* Layout */
+  text-align: center;
+
+  /* Design*/
+  border: 2px solid white;
+  border-radius: 15px;
+  font-size: 30px;
+  background-color: lightblue;
+}
+
+.buttons:first-child {
+  background-color: lightcoral;
+}
+
+.buttons:nth-of-type(2),
+.buttons:nth-of-type(3),
+.buttons:nth-of-type(4),
+.buttons:nth-of-type(8),
+.buttons:nth-of-type(12),
+.buttons:nth-of-type(16) {
+  background-color: lightsalmon;
+}
+
+.buttons:last-child {
+  background-color: lightgreen;
+  grid-column: 3 / 5;
 }
